css fix for high contrast mode

--- a/public/sass/high-contrast.scss
+++ b/public/sass/high-contrast.scss
@@ -270,7 +270,7 @@
   }
 
   #wrapper .slider.mod_newslist {
-    .list-nav a {
+    .list-nav span {
       border-color: #fff !important;
     }
 
